	use that information to improve the generated modules.

	* tools/apiGen/ApiGen.hs: take advantage of the new ModuleScan
	information in the various module headder fields. Add a new
	--scanmodules flag.

	* tools/apiGen/Template.chs: add author and copyright variable.

	* tools/apiGen/Makefile: use the new --scanmodules feature.

	* tools/apiGen/StringUtils.hs: add extra utility function.

2005-02-06 Duncan Coutts <duncan@coutts.uklinux.net>

	* configure.ac: win32 fixes. Do not define WIN32 on windows since it
	is already defined o that platform. Define a conditional so that
	Makefile.am can conditonally compile a few modules. We no longer need
	to pass -fnative-struct to gcc on windows.

	* Makefile.am: win32 fixes. Add $(EXEEXT) in a few places to so names
	of dependencies are correct on windows. Only compile the plug and
	socket modules on non-win32 platforms.

	* tools/c2hs/toplevel/C2HSConfig.hs.in: comment out the @TMPDIR@
	substitution since it causes problems in windows and is not used
	anyway.

	* tools/c2hs/c/CParser.hs: make c2hs accept __attribute__'s on
	declerations of functions returning pointer types. This is needed for
	some mingw header file.

2005-02-05 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/apiGen/ApiGen.hs: add support for interfaces, deal with
	examples in a more general way and improve the generation of
	properties.

	* tools/apiGen/format-docs.xsl: deal with another kind of table.

	* tools/apiGen/ApiGen.hs, tools/apiGen/Api.hs, tools/apiGen/Docs.hs,
	tools/apiGen/FormatDocs.hs, tools/apiGen/Marshal.hs,
	tools/apiGen/CodeGen.hs, tools/apiGen/StringUtils.hs: split ApiGen.hs
	into several modules to make it easier to manage and understand.

	* tools/apiGen/Makefile: update the Makefile accordingly

2005-02-04 Axel Simon <A.Simon@kent.ac.uk>

	* gtk/Graphics/UI/Gtk/Display/Image.chs: Added imageSetFromPixbuf.
	
2005-02-03 Duncan Coutts <duncan@coutts.uklinux.net>
